recursion.lessons.recursion.tree.Tree.scala.error
Tree:15: error: not found: value agnle
	droite(agnle)
               ^